<resources>
    <string name="app_name">Boardgame Tracker</string>
    <string name="played_games_button">Played Games</string>
    <string name="players_button">Players</string>
    <string name="button_add_player">Add Player</string>
    <string name="button_delete_player">Delete Player</string>
    <string name="new_player_name_hint">Name (eg. Charles)</string>
    <string name="id_delete_player_hint">Id (eg. 5)</string>
    <string name="toast_enter_player_name">Please enter a name for the player.</string>
    <string name="toast_entered_player_name">Player was added.</string>
    <string name="DB_NAME" translatable="false">BoardgamesTrackerDB</string>
    <string name="toast_entered_player_name_not_valid">Player was not added. Enter a different name.</string>
    <string name="player_name">Player name</string>
    <string name="hint_update_player_name">New player name</string>
    <string name="button_update_player">Update</string>
    <string name="toast_invalid_update_name">Field cannot be empty.</string>
    <string name="button_add_game">Add game</string>
    <string name="hint_new_game_name">Hint: Anachrony</string>
    <string name="hint_new_game_date" translatable="false">\?</string>
    <string name="button_date_picker">Select date</string>
    <string name="Winners_text">Winners</string>
    <string name="Players_text">Players</string>
    <string name="button_eng_lang">English</string>
    <string name="button_cz_lang">Čeština</string>
    <string name="button_delete_game">Delete game</string>
</resources>