<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayersActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/view_players"
        android:layout_width="387dp"
        android:layout_height="310dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/button_add_player"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_add_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />

    <EditText
        android:id="@+id/editTextNewPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/new_player_name_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#78909C"
        app:layout_constraintBottom_toBottomOf="@+id/button_add_player"
        app:layout_constraintEnd_toStartOf="@+id/button_add_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_add_player"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_delete_player"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_delete_player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.934"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <EditText
        android:id="@+id/editTextPlayerId_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/id_delete_player_hint"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_delete_player"
        app:layout_constraintEnd_toStartOf="@+id/button_delete_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_delete_player"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>